# human-chessbot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: development.md
docs/gee_stott_final_presentation/: Makefile  presentation.md
docs/gee_stott_final_report/: Makefile  main.typ
docs/gee_stott_final_report/sections/: abstract.typ  appendices.typ  background.typ  conclusion.typ  discussion.typ  implementation.typ  introduction.typ  methodology.typ  references.typ  results.typ
scripts/: update_fork_from_upstream.sh
src/: pgn_to_csv.py  random_forest.ipynb
src/convert/: combine_pgn_files.py  pgn_to_csv.py
src/database/: database.py
src/play/: main.py
src/play/game/: game.py
src/play/player/: human_player.py  lc0_bot_player.py  player.py  random_bot_player.py  stockfish_bot_player.py
src/play/ui/: cli.py  gui.py  ui.py
src/train/: random_forest.ipynb
src/train/data/: fill_snapshots.py
src/train/data/database/: database.py  game_snapshots.py  raw_games.py
src/train/data/models/: game_snapshot.py  raw_game.py
src/train/data/processers/: game_snapshots.py
src/train/data/requesters/: raw_games.py
src/train/database/: plotter.py
src/train/humanoid/: ann.ipynb
src/train/models/: random_forest.ipynb
src/utils/: parser.py
utils/: parser.py
