[project]
name = "human-chessbot"
version = "0.1.0"
description = "A chess application with multiple engines and interfaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "chess (>=1.11.0)",
    "pydantic>=2.0.0",
    "python-dotenv (>=1.2.1,<2.0.0)",

    # GUI dependencies
    "pillow>=11.0.0",

    # Data science / ML dependencies
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "joblib>=1.0.0",

    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "zstandard>=0.22.0",

    # Jupyter/Notebook support
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",

    # Dev tools
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "black (>=24.0.0)",
    "isort (>=5.13.0)",
    "mypy (>=1.8.0)",
    "pre-commit (>=3.5.0)",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

# ==============================================================================
# Black (Code Formatter)
# ==============================================================================

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4.20250913"
pandas-stubs = "^2.3.2.250926"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ==============================================================================
# isort (Import Sorter)
# ==============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ==============================================================================
# Ruff (Linter)
# ==============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["ARG", "S"]  # Allow unused arguments in tests

# ==============================================================================
# mypy (Type Checker)
# ==============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "chess.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

# ==============================================================================
# pytest (Testing)
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ==============================================================================
# Coverage
# ==============================================================================
[tool.coverage.run]
source = ["packages"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[[tool.mypy.overrides]]
module = "zstandard.*"
ignore_missing_imports = true
